--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,11 +1,3 @@
-live_config_reload = true
-
-import = [
-  "~/.config/alacritty/themes/themes/rose-pine.toml"
-]
-
-shell = "/opt/homebrew/bin/tmux"
-
 [cursor]
 style = "Block"
 unfocused_hollow = true
@@ -107,3 +99,14 @@ y = 12
 [scrolling]
 history = 100000
 multiplier = 3
+
+[general]
+live_config_reload = true
+
+import = [
+  "~/.config/alacritty/themes/themes/ashes_dark.toml"
+]
+
+[terminal]
+
+shell = "/opt/homebrew/bin/tmux"
